--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 # 学号:
 #   pwd：密码
 # 注意引号
-"00000000":
-  pwd: "xxxxx"
-"11111111":
-  pwd: "xxxxx"
+"19122246":
+  pwd: "Lzk94LoveSHU!"
+# "11111111":
+#  pwd: "xxxxx"
